feat: Chat 기반 Community 승인 워크플로우 구현
